[gd_scene load_steps=2 format=3 uid="uid://7jdwy2a3vknb"]

[ext_resource type="Script" uid="uid://bfk4r1ugrh6o5" path="res://ui/story/story_difficulty_select.gd" id="1_frkse"]

[node name="StoryDifficultySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_frkse")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -73.0
offset_right = 82.5
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultySelectContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/DifficultySelectContainer"]
layout_mode = 2
text = "Select Story Difficulty"

[node name="Label2" type="Label" parent="CenterContainer/DifficultySelectContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "(You can always change it later)"

[node name="Easy" type="Button" parent="CenterContainer/DifficultySelectContainer"]
layout_mode = 2
text = "Easy"

[node name="Normal" type="Button" parent="CenterContainer/DifficultySelectContainer"]
layout_mode = 2
text = "Normal"

[node name="Hard" type="Button" parent="CenterContainer/DifficultySelectContainer"]
layout_mode = 2
text = "Hard"

[connection signal="pressed" from="CenterContainer/DifficultySelectContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="CenterContainer/DifficultySelectContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="CenterContainer/DifficultySelectContainer/Hard" to="." method="_on_hard_pressed"]
